            Fix 'console.log([1,2,3].splice(0, 1.0))' (fix #2245)
            Bangle.js2: Added `Bangle.setLCDOverlay(img,x,y)` to allow an image to be overlaid on top of screen contents (eg for notifications)
            Fix issue parsing constant decls when not executing (fix #2255)
            Puck.js: Fix Puck.mag() in newest batch of Puck.js 2.1a sometimes returning -32768

     2v14 : Bangle.js2: Fix issue with E.showMenu creating a global `s` variable
            Bangle.js2: Recheck string wrapping after font change inside E.showMenu
            Bangle.js2: Double input buffer size from 1kb to 2kb
            Bangle.js2: Fix E.showMenu title changing color after scroll down+up *if* a non-standard theme was used
            Bangle.js2: Fix wear detection on latest Bangle.js 2 (VC31B variant) (fix #2141)
            Bangle.js2: Allow variable HRM poll rates on Bangle.js 2 VC31B variant
            Bangle.js2: VC31 HRM variant now polls at 25hz (not 50)
            Bangle.js1: E.showMenu now displays boolean values with no `format` as a checkbox
            Bangle.js1: E.showMenu now displays a submenu for multiple choice menu items (#2184)
            Bangle.js: built-in locale now doesn't depend on argument being an instance of Date (#2187)
            Bangle.js: Add ".noList" property to prevent E.showScroller inside E.showMenu            
            Bangle.js2: Add "Back"-Button on submenus inside E_showMenu 
            Graphics: g.setClipRect now uses rotated coordinates
            Graphics: g.draw/fillCircle now works with rotated coordinates
            Bangle.js2: Touch/drag coordinates now obey g.setRotation
            Graphics: Fix drawString with combination of g.setClipRect and g.setRotation
            nRF5x: Allow 'high speed' watches via 'hispeed' argument to setWatch. Higher power consumption but detects fast (<25us) pulses.