@@ -14,5 +14,8 @@ cmp(`He$lo`,"He$lo");
 cmp(`Hell${0} world`,"Hell0 world");
 cmp(`H${1+2}ll${0} ${w}`,"H3ll0 world");
 cmp(`Its an ${{}}`,"Its an [object Object]");
+cmp(`${`Nested`}`,"Nested");
+cmp(`waypoints${1?`.${1}`:""}.json`,"waypoints.1.json");
 
 result = pass==tests;
+
